--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -28,10 +28,10 @@
       </div>
     </div>
   </div>
-  <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
 
 <div class="buttons" id="buttonss">
+  <p class=""><a href="#" (click)="toBack($event)">Back to top</a></p>
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-user" routerLinkActive="active">User</button>
 </div>
