--- a/src/app/component/admin/admin-user/admin-user.component.html
+++ b/src/app/component/admin/admin-user/admin-user.component.html
@@ -20,10 +20,10 @@
         </div>
       </div>
     </div>
-    <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
   </div>
 <!-- ***************************************************************************************************** -->
 <div class="buttons">
+  <p class="scroolTop"><a href="#" (click)="toBack($event)">Back to top</a></p>
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-projet" routerLinkActive="active">Projet</button>
 </div>
