--- a/src/app/component/layout/footer/footer.component.html
+++ b/src/app/component/layout/footer/footer.component.html
@@ -2,14 +2,16 @@
 
   <div class="footerHaut">
     <ul>
-      <li>CGU
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, repellat placeat sint obcaecati commodi ipsam velit deleniti ratione laborum et fugiat quod beatae ea illum minima nihil soluta, id odit.</p>
+      <li  routerLink="/cgu" >CGU
+        <p>Notre mission est de connecter les professionnels du monde entier afin d’améliorer leur productivité et de
+          les accompagner sur la voie de la réussite.</p>
       </li>
-      <li>Politique Confidentialité
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, repellat placeat sint obcaecati commodi ipsam velit deleniti ratione laborum et fugiat quod beatae ea illum minima nihil soluta, id odit.</p>
+      <li  routerLink="/pc" >Politique Confidentialité
+        <p>La mission de LinkedIn est de connecter les professionnels du monde entier afin d’améliorer leur productivité
+          et de les accompagner sur la voie de la réussite.</p>
       </li>
-      <li>Mention Legale
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, repellat placeat sint obcaecati commodi ipsam velit deleniti ratione laborum et fugiat quod beatae ea illum minima nihil soluta, id odit.</p>
+      <li  routerLink="/about" >A Propos
+        <p>IAP est un site internet qui met en relation des collaborateurs qui ont des approches semblabe.</p>
       </li>
     </ul>
     <div class="footerBas">
@@ -18,7 +20,6 @@
         <i class="fab fa-instagram"></i>
         <i class="fab fa-linkedin-in"></i>
       </figure>
-      <p>A Propos</p>
       <span>@copyrith</span>
     </div>
   </div>
