--- a/src/app/component/authentification/register/register.component.html
+++ b/src/app/component/authentification/register/register.component.html
@@ -8,10 +8,10 @@
           type="text"
           class="form-control"
           id="floatingInput"
-          placeholder=""
+          placeholder="Username"
           formControlName="username"
         />
-        <label for="floatingInput">username</label>
+        <label for="floatingInput">Username</label>
       </div>
 
       <div class="form-floating">
@@ -25,10 +25,10 @@
           }"
           class="form-control"
           id="floatingInput"
-          placeholder=""
+          placeholder="name@mail.com"
           formControlName="email"
         />
-        <label for="floatingInput">Adresse email</label>
+        <label for="floatingInput">Adresse Email</label>
       </div>
 
       <div class="form-floating">
@@ -36,10 +36,10 @@
           type="text"
           class="form-control"
           id="floatingInput"
-          placeholder=""
+          placeholder="Présentation"
           formControlName="presentation"
         />
-        <label for="floatingInput">presentation</label>
+        <label for="floatingInput">Présentation</label>
       </div>
 
       <div class="form-floating">
@@ -47,7 +47,7 @@
           type="tel"
           class="form-control"
           id="floatingInput"
-          placeholder=""
+          placeholder="07 08 48 39 55"
           formControlName="number"
         />
         <label for="floatingInput">Telephone</label>
