tout est correctMerge branch 'develop' of https://github.com/Cmfauvel/Shooting-Sharks-Sprint1-uldvelh into feature/loginRegister
# Conflicts:
#	app/src/app/app-routing.module.ts
#	app/src/app/app.component.html
#	app/src/app/app.module.ts

--- a/src/app/component/authentification/bye/bye.component.scss
+++ b/src/app/component/authentification/bye/bye.component.scss
@@ -41,6 +41,7 @@
         border: 1px salmon solid;
         &:hover{
           background-color: #4b7af2;
+          color: salmon;
         }
       }
     }
