--- a/src/app/component/authentification/register/register.component.scss
+++ b/src/app/component/authentification/register/register.component.scss
@@ -39,6 +39,9 @@
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    .error{
+      color: red;
+    }
   }
 }
 
