--- a/src/app/component/projet/projet.component.scss
+++ b/src/app/component/projet/projet.component.scss
@@ -1,7 +1,7 @@
 .container-projet{
   padding: 1rem;
   height: auto;
-  border: 1px solid salmon;
+  // border: 1px solid salmon;
   border-radius: 10px;
   text-align: center;
   margin: 1rem 0;
@@ -9,11 +9,12 @@
   h4{
     color: #3c5aa6;
   }
-  
+
   .button{
-    border: salmon 1px solid;
+    // border: salmon 1px solid;
     border-radius: 50%;
     color: #3c5aa6;
+    background-color: #979690;
     height: 50px;
     width: 50px;
     &:hover{
