--- a/src/app/component/authentification/register/register.component.html
+++ b/src/app/component/authentification/register/register.component.html
@@ -43,24 +43,11 @@
       </div>
 
       <div class="form-floating">
-        <input
-          type="tel"
-          class="form-control"
-          id="floatingInput"
-          placeholder="07 08 48 39 55"
-          formControlName="number"
-        />
-        <label for="floatingInput">Telephone</label>
-      </div>
-
-
-      <div class="form-floating">
         <select aria-label="Default select example" class="form-control"
                 id="floatingInput role"formControlName="role">
                   <option selected>Selectionnez votre profil</option>
-                  <option value="ROLE_ADMIN">Admin</option>
-                  <option value="ROLE_USER">Investisseur</option>
-                  <option value="ROLE_MODERATOR">Entrepreneur</option>
+                  <option value="ROLE_INVESTISSEUR">Investisseur</option>
+                  <option value="ROLE_ENTREPRENEUR">Entrepreneur</option>
                 </select>
                 <label for="floatingInput role">Role</label>
       </div>
