--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -20,7 +20,7 @@
         </p>
     </div>
   </div>
-    <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Modifier le projet" routerLink="/edit-profil">
+    <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Modifier le projet" routerLink="/edit-profil">
       <i class="fas fa-user-edit"></i>
-    </button> -->
+    </button>
 </div>
