login register OK

--- a/src/app/component/authentification/bye/bye.component.html
+++ b/src/app/component/authentification/bye/bye.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="containe">
   <div class="logo-div">
     <img src="../../../../assets/Fadimalogo.png" alt="" class="logo">
@@ -14,8 +13,7 @@
       </div>
     </div>
   </div>
-=======
-<div class="container row">
+<!-- <div class="container row">
   <div class="containerr col-sm-8 md-6 lg-8">
     <h2>On espère vous revoir très vite!</h2>
     <div class="buttons">
@@ -24,5 +22,4 @@
     </div>
   </div>
 
-</div>
->>>>>>> 743c4e52ec9d5be15dfd80096675bf7401f28070
+</div> -->
