--- a/src/app/component/authentification/bye/bye.component.scss
+++ b/src/app/component/authentification/bye/bye.component.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .containe{
   padding: 0 100px;
   margin: 2rem auto;
@@ -44,39 +43,32 @@
           background-color: #4b7af2;
           color: salmon;
         }
-=======
-.containerr{
-  color: white;
-  // width: 300px;
-  // height: auto;
-  margin: 10% auto;
-  padding: 5%;
-  border-radius: 50px;
-  background-color: #3c5aa6;
-  // border: 1px salmon solid;
-  .buttons{
-    display: flex;
-    justify-content: space-around;
-    .button{
-      color: salmon;
-      // background-color: #4b7af2;
-      height: 40px;
-      border-radius: 5px;
-      width: auto;
-      border: none;
-      // border: 2px solid salmon;
-      margin: 1rem;
-      // #4b7af2
-      &:hover{
-        background-color: #4b7af2;
+// .containerr{
+//   color: white;
+//   // width: 300px;
+//   // height: auto;
+//   margin: 10% auto;
+//   padding: 5%;
+//   border-radius: 50px;
+//   background-color: #3c5aa6;
+//   // border: 1px salmon solid;
+//   .buttons{
+//     display: flex;
+//     justify-content: space-around;
+//     .button{
+//       color: salmon;
+//       // background-color: #4b7af2;
+//       height: 40px;
+//       border-radius: 5px;
+//       width: auto;
+//       border: none;
+//       // border: 2px solid salmon;
+//       margin: 1rem;
+//       // #4b7af2
+//       &:hover{
+//         background-color: #4b7af2;
 
->>>>>>> 743c4e52ec9d5be15dfd80096675bf7401f28070
-      }
+      // }
     }
   }
-
-<<<<<<< HEAD
-
-=======
 }
->>>>>>> 743c4e52ec9d5be15dfd80096675bf7401f28070
