--- a/src/app/component/authentification/register/register.component.html
+++ b/src/app/component/authentification/register/register.component.html
@@ -12,11 +12,7 @@
           formControlName="username"
         />
         <label for="floatingInput">Username</label>
-          id="floatingInput username"
-          placeholder=""
-          formControlName="username"
-        />
-        <label for="floatingInput frmNameA" autocomplete="username">username</label>
+        <!-- <label for="floatingInput frmNameA" autocomplete="username">username</label> -->
       </div>
 
       <div class="form-floating">
@@ -35,10 +31,6 @@
           formControlName="email"
         />
         <label for="floatingInput">Adresse Email</label>
-          id="floatingInput email"
-          placeholder=""
-          formControlName="email"
-        />
         <label for="floatingInput email" autocomplete="email">Adresse email</label>
       </div>
 
@@ -59,11 +51,10 @@
                   <option selected>Selectionnez votre profil</option>
                   <option value="ROLE_INVESTISSEUR">Investisseur</option>
                   <option value="ROLE_ENTREPRENEUR">Entrepreneur</option>/>
-
         <label for="floatingInput presentation" autocomplete="presentation">presentation</label>
       </div> -->
 
-      <div class="form-floating">
+      <!-- <div class="form-floating">
         <input
           type="tel"
           class="form-control"
@@ -73,15 +64,12 @@
           formControlName="number"
         />
         <label for="floatingInput number">Telephone</label>
-      </div>
+      </div> -->
 
       <div class="form-floating">
         <select aria-label="Default select example" class="form-control"
                 id="floatingInput role"formControlName="role">
                   <option selected>Selectionnez votre profil</option>
-                  <!-- <option value="user">User</option> -->
-                  <!-- <option value="moderator">Moderator</option> -->
-                  <option value="ROLE_ADMIN">Admin</option>
                   <option value="ROLE_USER">Investisseur</option>
                   <option value="ROLE_MODERATOR">Entrepreneur</option>
                 </select>
