--- a/src/app/component/admin/home-admin/home-admin.component.html
+++ b/src/app/component/admin/home-admin/home-admin.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="admin row">
-    <!-- <div class="nouveau-projet col-sm-4 md-8 lg-12">
-      <h4>Ajouter un nouveau admin</h4>
+    <div class="nouveau-projet col-sm-4 md-8 lg-12">
+      <h3 class="h">Ajouter un nouveau admin</h3>
       <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd" routerLink="/add-admin"
         routerLinkActive="active">
         <div class="buttonAdd">
           <i class="fas fa-plus-circle"></i>
         </div>
       </button>
-    </div> -->
+    </div>
   </div>
   <div class="buttons">
     <div class="d-grid gap-2 col-6 mx-auto history">
