--- a/src/app/component/admin/admin-user/admin-user.component.scss
+++ b/src/app/component/admin/admin-user/admin-user.component.scss
@@ -8,7 +8,7 @@
   .list-projets{
     max-width: 300px;
     min-width: 250px;
-    border: 1px solid salmon;
+    border: none;
     background-color: rgb(238, 234, 234);
     border-radius: 10px;
     color: #3c5aa6;
@@ -28,7 +28,7 @@
   flex-wrap: wrap;
   button{
     color: #3c5aa6;
-    border: #f27e63 1px solid;
+    border: none;
     padding: 5px;
     margin: 5px;
     border-radius: 5px;
