--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,23 +1,10 @@
 
 .container{
   padding: 1rem 0;
-  .photo{
-    height: 100px;
-    width: 100px;
-    margin: auto;
-    border-radius: 50%;
-    position: relative;
-    top: 50px;
-    img{
-      height: 100px;
-      width: 100px;
-      border: 3px solid #3c5aa6;
-      background-color: #f27e63;
-      border-radius: 50%;
-    }
-  }
+
   .bloc{
-    border: 1px solid #f27e63;
+    // border: 1px solid #f27e63;
+    background-color: rgb(238, 234, 234);
     display: flex;
     justify-content: space-between;
     padding: 5rem 1rem 1rem;
@@ -30,7 +17,8 @@
     .presentation{
       width: 40%;
       height: auto;
-      border: 1px solid #f27e63;
+      // background-color: beige;
+      // border: 1px solid #f27e63;
       .title{
         padding: 1rem;
         color:#3c5aa6;
