--- a/src/app/component/projet/add-projet/add-projet.component.scss
+++ b/src/app/component/projet/add-projet/add-projet.component.scss
@@ -1,8 +1,16 @@
 .container{
-  border: 1px solid #f27e63;
+  // border: 1px solid #f27e63;
+  background-color: #3c5aa6;
   margin: 1rem 0;
-  color: #3c5aa6;
+  color: white;
+  border-radius: 5px;
+  #texte{
+    color: white;
+  }
 
+  .texte{
+    color: #3c5aa6;
+  }
   .col-sm-3 {
     flex: 0 0 auto;
     width: 24.5%;
@@ -19,7 +27,7 @@
   color: #3c5aa6;
   }
   textarea {
-    border: 1px solid #f27e63;
+    // border: 1px solid #f27e63;
     height: 150px;
     padding-bottom: 5px;
     margin-bottom: 1rem;
@@ -32,7 +40,7 @@
   }
 }
 .nouveau-projet {
-  border: 1px solid #f27e63;
+  // border: 1px solid #f27e63;
   color: #3c5aa6;
   text-align: center;
   margin-bottom: 1rem;
@@ -49,7 +57,7 @@
 
   button{
     color: #3c5aa6;
-    border: #f27e63 1px solid;
+    border: none;
     padding: 5px;
     margin: auto;
     border-radius: 5px;
