--- a/src/app/component/projet/edit-projet/edit-projet.component.html
+++ b/src/app/component/projet/edit-projet/edit-projet.component.html
@@ -1,11 +1,11 @@
-<div class="login-form text-center edit-container">
+<div class="login-form text-center edit-container" id="edit-container">
   <main class="form-signin">
     <form class="container" (ngSubmit)="updateProj()" [formGroup]="projetForm">
       <h1>Modifiez Votre projet !</h1>
 
       <div class="form-floating input-div">
         <input type="number"
-                class="form-control"
+                class="form-control text"
                 id="floatingInput"
                 placeholder=""
                 formControlName="id">
@@ -14,7 +14,7 @@
 
       <div class="form-floating input-div">
         <input type="text"
-                class="form-control"
+                class="form-control text"
                 id="floatingInput"
                 placeholder=""
                 formControlName="name">
@@ -22,23 +22,23 @@
       </div>
       <div class="form-floating input-div">
         <input type="text"
-                class="form-control"
+                class="form-control text"
                 id="floatingInput"
                 placeholder=""
                 formControlName="description">
         <label for="floatingInput">description</label>
       </div>
-      <div class="form-floating input-div">
+      <!-- <div class="form-floating input-div">
         <input type="text"
                 class="form-control"
                 id="floatingInput"
                 placeholder=""
                 formControlName="entrepreneur">
         <label for="floatingInput">auteur</label>
-      </div>
+      </div> -->
       <div class="form-floating input-div">
         <input type="text"
-                class="form-control"
+                class="form-control text"
                 id="floatingInput"
                 placeholder=""
                 formControlName="besoin">
@@ -47,7 +47,7 @@
 
       <div class="form-floating input-div">
         <input type="date"
-                class="form-control"
+                class="form-control text"
                 id="floatingInput"
                 placeholder=""
                 formControlName="dateD">
