--- a/src/app/component/projet/edit-projet/edit-projet.component.scss
+++ b/src/app/component/projet/edit-projet/edit-projet.component.scss
@@ -1,25 +1,29 @@
-
 .edit-container{
-  color: #3c5aa6;
+  color: white;
+  border-radius: 15px;
+  background-color: #3c5aa6;
   .container{
     margin: 1rem auto;
+
+    .text{
+      color:#3c5aa6
+    }
     .input-div{
       margin: 1rem auto;
       color: #3c5aa6;
     }
   }
   .buttons{
-    padding: 10px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    // margin: 10px;
+
     button{
       color: #3c5aa6;
-      border: #f27e63 1px solid;
       padding: 5px;
-      margin: 5px;
+      margin: 5px 0;
       border-radius: 5px;
+      border: none;
     }
   }
 }
