--- a/src/app/component/reseau/reseau.component.scss
+++ b/src/app/component/reseau/reseau.component.scss
@@ -34,7 +34,7 @@
   justify-content: space-around;
   .list-projets{
     max-width: 300px;
-    border: 1px solid salmon;
+    // border: 1px solid salmon;
     background-color: rgb(238, 234, 234);
     border-radius: 10px;
     color: #3c5aa6;
@@ -52,7 +52,8 @@
       // margin: 10px;
       button{
         color: #3c5aa6;
-        border: #f27e63 1px solid;
+        background-color: #fff;
+        border: none;
         padding: 5px;
         margin: 5px;
         border-radius: 5px;
